--- a/admin/package.json
+++ b/admin/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.2",
     "axios": "^1.8.4",
+    "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5"
   },
