--- a/appointmentfrontend/package.json
+++ b/appointmentfrontend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^12.7.4",
+    "lodash": "^4.17.21",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.1"
