--- a/appointmentBackend/pom.xml
+++ b/appointmentBackend/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.2</version> <!-- Use the latest version -->
+        </dependency>
 
 
     </dependencies>
